-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 13, 15
-
Component/s: hotspot
-
b25
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8373333 | 25.0.3-oracle | Md Shahbaz Yusuf | P4 | Resolved | Fixed | b01 |
| JDK-8373911 | 25.0.3 | Aleksey Shipilev | P4 | Resolved | Fixed | master |
| JDK-8373352 | 21.0.11-oracle | Md Shahbaz Yusuf | P4 | Resolved | Fixed | b01 |
| JDK-8373954 | 17.0.19-oracle | Md Shahbaz Yusuf | P4 | Resolved | Fixed | b01 |
java.lang.RuntimeException: 'SHA512 instruction (for SHA-384 and SHA-512) is not available on this CPU.' found in stderr: 'SHA512 instruction (for SHA-384 and SHA-512) is not available on this CPU.'
The test fails on jdk8-15 where SHA15 intrinsics (introduced by
- backported by
-
JDK-8373333 AArch64: TestUseSHA512IntrinsicsOptionOnSupportedCPU.java fails on CPU with SHA512 feature support
-
- Resolved
-
-
JDK-8373352 AArch64: TestUseSHA512IntrinsicsOptionOnSupportedCPU.java fails on CPU with SHA512 feature support
-
- Resolved
-
-
JDK-8373911 AArch64: TestUseSHA512IntrinsicsOptionOnSupportedCPU.java fails on CPU with SHA512 feature support
-
- Resolved
-
-
JDK-8373954 AArch64: TestUseSHA512IntrinsicsOptionOnSupportedCPU.java fails on CPU with SHA512 feature support
-
- Resolved
-
- relates to
-
JDK-8251216 Implement MD5 intrinsics on AArch64
-
- Resolved
-
-
JDK-8296208 AArch64: Enable SHA512 intrinsic by default on supported hardware
-
- Resolved
-
-
JDK-8372941 Rework compiler/intrinsics/sha tests to use intrinsic availability
-
- Open
-
- links to
-
Commit(master)
openjdk/jdk25u-dev/43f752f5
-
Commit(master)
openjdk/jdk/69682167
-
Review(master)
openjdk/jdk25u-dev/80
-
Review(master)
openjdk/jdk/28053